# edf-prosthetic-research

./: .gitignore  .pre-commit-config.yaml  ACCURACY_COMPARISON.md  CHANGES_SUMMARY.md  CNN_LSTM_INTEGRATION.md  Dockerfile  EEG_API_README.md  FIX_APP_JS.md  Makefile  ORGANIZATION.md  ProstheticArm.ipynb  QUICK_COMPARISON.md  QUICK_START.md  README.md  REFACTORING_SUMMARY.md  RUN_COMMANDS.md  check_training.sh  cnn-lstm.ipynb  cnn_lstm_model.py  compare_models.py  coverage.xml  eeg_api_server.py  eeg_simulator_react.jsx  eegnet_csp.ipynb  eegnet_results.txt  evaluate_with_visualization.py  improved_cnn_lstm_model.py  organize_files.sh  pyproject.toml  run_csp_svm.py  run_csp_svm_optimized.py  run_eegnet.py  run_tests.py  spectral_analysis.py  train_cnn_lstm.py  train_model.py  validate_setup.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  docker.yml
docs/: ACCURACY_COMPARISON.md  ACCURACY_COMPARISON_FULL.md  ACCURACY_FILTER.md  AUTO_LOAD_READY.md  AUTO_LOAD_SETUP.md  CNN_LSTM_PIPELINE_EXPLANATION.md  CONNECT_IMPROVED_MODEL.md  CONTRIBUTING.md  EXACT_COMMANDS.md  HOW_TO_RUN_CNN_LSTM.md  IMPROVED_CNN_LSTM.md  IMPROVEMENTS_SUMMARY.md  IMPROVE_ACCURACY.md  MODEL_ACCURACIES.md  ORGANIZATION_COMPLETE.md  PIPELINE_FLOWCHART.md  QUICK_START_GUIDE.md  SETUP_REACT_SIMULATOR.md  TRAINING_NOTIFICATIONS.md  USAGE_GUIDE.md  VALIDATION_DATA_SETUP.md  WHAT_IS_REACT.md
models/: best_model.pth  csp_svm_model.pkl  eegnet_trained.pth
results/: eegnet_final_results.txt  improved_model_results.txt  nn_results.txt  training_output.txt
scripts/: auto_load_on_complete.sh  eeg_api_server.py  load_improved_cnn_lstm.py  load_improved_model.py  load_models.py  load_trained_models.sh  monitor_training.sh  notify_when_done.sh  run_csp_svm.py  run_csp_svm_optimized.py  run_eegnet.py  run_tests.py  train_cnn_lstm.py  train_improved_cnn_lstm.py  train_improved_model.py  train_on_validation_data.py
src/change_me/: __main__.py  utils.py
src/edf_ml_model/: __init__.py  __main__.py  app.py  data_utils.py  edf_parser.py  improved_model.py  inference.py  model.py  utils.py  (+4 more)
tests/: app_test.py  edf_parser_test.py  main_test.py  utils_test.py
(+10 files in other folders)
